--- a/src/main/resources/templates/formMateria.html
+++ b/src/main/resources/templates/formMateria.html
@@ -21,18 +21,27 @@
 				<label for="codigo" class="form-label">Código</label> <input
 					type="text" class="form-control" id="codigo"
 					data-th-field="*{codigo}" data-th-readonly="${flag}" required>
+				<p class="form-text text-danger"
+					data-th-if="${#fields.hasErrors('codigo')}"
+					data-th-errors="*{codigo}"></p>
 			</div>
 
 			<div class="col-sm-6">
 				<label for="nombre" class="form-label">Nombre Materia</label> <input
 					type="text" class="form-control" id="nombre"
 					data-th-field="*{nombre}" required>
+				<p class="form-text text-danger"
+					data-th-if="${#fields.hasErrors('nombre')}"
+					data-th-errors="*{nombre}"></p>
 			</div>
 
 			<div class="col-sm-6">
 				<label for="curso" class="form-label">Curso</label> <input
 					type="text" class="form-control" id="curso"
 					data-th-field="*{curso}" required>
+				<p class="form-text text-danger"
+					data-th-if="${#fields.hasErrors('curso')}"
+					data-th-errors="*{curso}"></p>
 			</div>
 
 			<div class="col-sm-6">
@@ -58,15 +67,22 @@
 			</div>
 
 			<div class="col-sm-6">
-				<label for="docente" class="form-label">Docente</label> <input
-					type="text" class="form-control" id="docente"
-					data-th-field="*{docente}" required>
+				<label class="form-label" for="docente">Docente</label> <select
+					class="form-select" id="docente" data-th-field="*{docente.legajo}"
+					required>
+					<option value="">Seleccionar Docente</option>
+					<option data-th-each="d:${listadoDocentes}"
+						data-th-value="${d.legajo}" data-th-text="${d.nombre}"></option>
+				</select>
 			</div>
 
 			<div class="col-sm-6">
 				<label for="carrera" class="form-label">Carrera</label> <input
 					type="text" class="form-control" id="carrera"
 					data-th-field="*{carrera}" required>
+				<p class="form-text text-danger"
+					data-th-if="${#fields.hasErrors('carrera')}"
+					data-th-errors="*{carrera}"></p>
 			</div>
 
 			<br>
@@ -74,10 +90,13 @@
 			<div>
 				<button type="submit" class="btn btn-primary">Guardar
 					Materia</button>
-				<a class="btn btn-secondary" href="/listadoMaterias">Ver listado de
-					Materias</a>
+				<a class="btn btn-secondary" href="/listadoMaterias">Ver listado
+					de Materias</a>
 			</div>
 		</form>
+		<div class="alert alert-danger" role="alert" data-th-if="${errors}">
+			<p data-th-text="${cargaDocenteErrorMessage}"></p>
+		</div>
 	</div>
 	<br>
 	<br>
