Finalizacion Relacion Materia con Alumnos. Valerio Sebastian

--- a/src/main/resources/templates/formCarrera.html
+++ b/src/main/resources/templates/formCarrera.html
@@ -43,7 +43,7 @@
 	                     </div>
 	
 	                     <div class="form-outline mb-4">
-	                        <input type="number" id="cantidad" class="form-control" data-th-field="*{cantidadAños}"/>
+	                        <input type="number" id="cantidad" class="form-control" data-th-field="*{cantidadAnios}"/>
 	                        <label class="form-label" for="cantidad">Cantidad de Años</label>
 	                     </div>
 	                     <div class="col-sm-6">
