--- a/src/main/resources/templates/listaDeCarreras.html
+++ b/src/main/resources/templates/listaDeCarreras.html
@@ -26,7 +26,7 @@
 				<tr data-th-each="carrera : ${listadoCarreras}">
 					<td data-th-text="${carrera.codigo}"></td>
 					<td data-th-text="${carrera.nombre}"></td>
-					<td data-th-text="${carrera.cantidadAños}"></td>
+					<td data-th-text="${carrera.cantidadAnios}"></td>
 					<td data-th-text="${carrera.estado}"></td>
 					<td><a data-th-href="@{'/borrarCarrera/'+${carrera.codigo}}"
 						class="btn btn-danger">Borrar</a> <a
