Validacion de Carrera.

--- a/src/main/resources/templates/listaDeCarreras.html
+++ b/src/main/resources/templates/listaDeCarreras.html
@@ -26,7 +26,7 @@
 				<tr data-th-each="carrera : ${listadoCarreras}">
 					<td data-th-text="${carrera.codigo}"></td>
 					<td data-th-text="${carrera.nombre}"></td>
-					<td data-th-text="${carrera.cantidadAños}"></td>
+					<td data-th-text="${carrera.cantidadAnios}"></td>
 					<td data-th-text="${carrera.estado}"></td>
 					<td><a data-th-href="@{'/borrarCarrera/'+${carrera.codigo}}"
 						class="btn btn-danger">Borrar</a> <a
@@ -35,6 +35,9 @@
 				</tr>
 			</tbody>
 		</table>
+	</div>
+	<div class="alert alert-danger" role="alert" data-th-if="${errors}">
+		<p data-th-text="${cargaCarreraErrorMessage}"></p>
 	</div>
 	<br>
 	<br>
