--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -61,11 +61,7 @@
 						</ul>
 					</li>
 					<li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Noticias</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Contacto</a>
-        </li>
+          <a class="nav-link active" aria-current="page" href="/alumnosPorCarrera">Listado de Alumno por Carrera</a>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Busca aqui" aria-label="Search">
