--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
@@ -9,10 +9,10 @@
 <footer class="bg-dark text-white p-1 " data-th-fragemnt="footer">
         <div class="row">
             <div class="col-md-6">
-                <p>Facultad de Ingeniería</p>
-                <p>Dirección: Calle Principal 123, San Salvador de Jujuy</p>
-                <p>Teléfono: +54 123 456 789</p>
-                <p>Correo electrónico: contacto@facultad.edu.ar</p>
+                <p>Facultad de IngenierÃ­a</p>
+                <p>DirecciÃ³n: Calle Principal 123, San Salvador de Jujuy</p>
+                <p>TelÃ©fono: +54 123 456 789</p>
+                <p>Correo electrÃ³nico: contacto@facultad.edu.ar</p>
             </div>
             <div class="col-md-6 text-md-end">
                 <a href="https://facebook.com/facultad"  class=" me-3">Facebook</a> <br>
@@ -20,7 +20,7 @@
                 <a href="https://linkedin.com/company/facultad"  class="">Instagram</a><br>	
             </div>
         </div>
-        <p class="mt-3 d-flex justify-content-center">&copy; 2024 Facultad de Ingeniería. Todos los derechos reservados.</p>
+        <p class="mt-3 d-flex justify-content-center">&copy; 2024 Facultad de IngenierÃ­a. Todos los derechos reservados.</p>
     </footer>
 
 </body>
