--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -55,13 +55,16 @@
 						<ul class="dropdown-menu">
 						<li><a class="dropdown-item" href="/formularioMateria">Agregar Materia</a></li>
 							<li><a class="dropdown-item" href="/listadoMaterias">Materias</a></li>
-							
-							
-
 						</ul>
 					</li>
-					<li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/alumnosPorCarrera">Listado de Alumno por Carrera</a>
+		<li class="nav-item"><a class="nav-link active" aria-current="page" href="/formularioInscripcion" role="button">Inscribir Alumno a Materia</a></li>
+						
+		<li class="nav-item">			 
+          <a class="nav-link active" aria-current="page" href="#">Noticias</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Contacto</a>
+        </li>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Busca aqui" aria-label="Search">
