--- a/src/main/resources/templates/listaDeAlumnos.html
+++ b/src/main/resources/templates/listaDeAlumnos.html
@@ -29,9 +29,15 @@
 					<a data-th-href="@{'/modificarAlumno/'+${alumno.lu}}" class="btn btn-warning">Modificar</a>
 				</td>
 			</tr>
+			<tr data-th-each="m:${listadoAlumnosM}"
+				 data-th-value="${m.codigo}" data-th-text="${m.nombre}">
+			</tr>
 		</tbody>
 	</table>
 	</div>
+	<div class="alert alert-danger" role="alert" data-th-if="${errors}">
+			<p data-th-text="${cargaAlumnoErrorMessage}"></p>
+		</div>
 			<div data-th-replace="~{fragments/footer::footer}"></div>
 			<script data-th-src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}"></script>
 	
