--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -60,10 +60,7 @@
 		<li class="nav-item"><a class="nav-link active" aria-current="page" href="/formularioInscripcion" role="button">Inscribir Alumno a Materia</a></li>
 						
 		<li class="nav-item">			 
-          <a class="nav-link active" aria-current="page" href="#">Noticias</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Contacto</a>
+          <a class="nav-link active" aria-current="page" href="/alumnosPorCarrera">Listado de Alumno por Carrera</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
