--- a/src/main/resources/templates/listaDeMaterias.html
+++ b/src/main/resources/templates/listaDeMaterias.html
@@ -31,7 +31,7 @@
 					<td data-th-text="${materia.curso}"></td>
 					<td data-th-text="${materia.cantidadHoras}"></td>
 					<td data-th-text="${materia.docente.nombre}"></td>
-					<td data-th-text="${materia.carrera}"></td>
+					<td data-th-text="${materia.carrera.nombre}"></td>
 					<td><a data-th-href="@{'/borrarMateria/'+${materia.codigo}}"
 						class="btn btn-danger">Borrar</a> <a
 						data-th-href="@{'/modificarMateria/'+${materia.codigo}}"
