Finalizada validacion y Correccion. Valerio Sebastian

--- a/src/main/resources/templates/formDocente.html
+++ b/src/main/resources/templates/formDocente.html
@@ -57,14 +57,14 @@
 					data-th-if="${#fields.hasErrors('telefono')}"
 					data-th-errors="*{telefono}"></p>
 			</div>
-			<div>
-				<label for="estadoAlumno" class="form-label mt-1 ">Estado</label> <select
-					id="estado" data-th-field="*{estado}" class="form-select" required>
-					<option value=true>True</option>
-					<option value=false>False</option>
-				</select>
+<!-- 			<div> -->
+<!-- 				<label for="estadoAlumno" class="form-label mt-1 ">Estado</label> <select -->
+<!-- 					id="estado" data-th-field="*{estado}" class="form-select" required> -->
+<!-- 					<option value=true>True</option> -->
+<!-- 					<option value=false>False</option> -->
+<!-- 				</select> -->
 
-			</div>
+<!-- 			</div> -->
 
 			<button type="submit" class="btn btn-primary">Guardar</button>
 		</form>
