--- a/src/main/resources/templates/formAlumno.html
+++ b/src/main/resources/templates/formAlumno.html
@@ -59,16 +59,16 @@
 					<p class="form-text text-danger" data-th-if="${#fields.hasErrors('lu')}" data-th-errors="*{lu}"></p>
 			</div>
 			
-			<div class="col-6">
+<!-- 			<div class="col-6"> -->
 			
-				<label for="estadoAlumno" class="form-label mt-1 ">Estado</label>
-						<select id="estadoAlumno"  class="form-select" data-th-field="*{estado}">
-							<option value=true>True</option>
-							<option value=false>False</option>
-						</select>
+<!-- 				<label for="estadoAlumno" class="form-label mt-1 ">Estado</label> -->
+<!-- 						<select id="estadoAlumno"  class="form-select" data-th-field="*{estado}"> -->
+<!-- 							<option value=true>True</option> -->
+<!-- 							<option value=false>False</option> -->
+<!-- 						</select> -->
 				
 				
-			</div>
+<!-- 			</div> -->
 			<div class="col-md-12">
 					    <label for="carrera" class="form-label">Carrera</label>
 					    	<select id="carrera" data-th-field="*{carrera.codigo}" class="form-control" required>
