--- a/src/main/resources/templates/formCarrera.html
+++ b/src/main/resources/templates/formCarrera.html
@@ -55,14 +55,14 @@
 								data-th-if="${#fields.hasErrors('cantidadAnios')}"
 								data-th-errors="*{cantidadAnios}"></p>
 	                     </div>
-	                     <div class="col-sm-6">
-							<label for="estadoCarrera" class="form-label mt-1">Estado</label><br>
-							<select class="form-select" id="estadoCarrera"
-								data-th-field="*{estado}">
-								<option value="true">True</option>
-								<option value="false">False</option>
-							</select>
-						</div>
+<!-- 	                     <div class="col-sm-6"> -->
+<!-- 							<label for="estadoCarrera" class="form-label mt-1">Estado</label><br> -->
+<!-- 							<select class="form-select" id="estadoCarrera" -->
+<!-- 								data-th-field="*{estado}"> -->
+<!-- 								<option value="true">True</option> -->
+<!-- 								<option value="false">False</option> -->
+<!-- 							</select> -->
+<!-- 						</div> -->
 						<br>
 						<div class="d-flex justify-content-end pt-1 mb-4">
 	                        <button type="submit" class="btn btn-custom btn-outline-light btn-rounded ">Guardar Carrera</button>
