--- a/src/main/resources/templates/formMateria.html
+++ b/src/main/resources/templates/formMateria.html
@@ -49,14 +49,14 @@
 				<input type="number" class="form-control" id="cantidadHoras"
 					data-th-field="*{cantidadHoras}" required>
 			</div>
-			<div class="col-sm-6">
-				<label for="estadoMateria" class="form-label mt-1">Estado</label><br>
-				<select class="form-select" id="estadoMateria"
-					data-th-field="*{estado}">
-					<option value="true">True</option>
-					<option value="false">False</option>
-				</select>
-			</div>
+<!-- 			<div class="col-sm-6"> -->
+<!-- 				<label for="estadoMateria" class="form-label mt-1">Estado</label><br> -->
+<!-- 				<select class="form-select" id="estadoMateria" -->
+<!-- 					data-th-field="*{estado}"> -->
+<!-- 					<option value="true">True</option> -->
+<!-- 					<option value="false">False</option> -->
+<!-- 				</select> -->
+<!-- 			</div> -->
 			<div class="col-sm-6">
 				<label for="modalidad" class="form-label">Modalidad</label> <select
 					class="form-select" id="modalidad" data-th-field="*{modalidad}"
